<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="400dp"
    android:layout_height="600dp"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context=".HelloWorldActivity" >

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="178dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/vote_instructions"
        android:id="@+id/Title"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:textColor="#000000"
        android:textSize="35sp" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/candidate1_text"
        android:id="@+id/candidate1"
        android:layout_below="@+id/Title"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:background="#FF0000"
        android:textColor="@drawable/text_color"
        android:visibility="invisible"
        android:onClick="goToPage"
        android:tag="1"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/candidate2_text"
        android:id="@+id/candidate2"
        android:background="#0000FF"
        android:textColor="@drawable/text_color"
        android:layout_alignBottom="@+id/text"
        android:layout_toRightOf="@+id/text"
        android:layout_alignRight="@+id/candidate1"
        android:layout_alignEnd="@+id/candidate1"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/candidate3_text"
        android:id="@+id/candidate3"
        android:background="#FF0000"
        android:textColor="@drawable/text_color"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/candidate4_text"
        android:id="@+id/candidate4"
        android:background="#0000FF"
        android:textColor="@drawable/text_color"
        android:layout_below="@+id/candidate3"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignRight="@+id/candidate3"
        android:layout_alignEnd="@+id/candidate3"
        android:visibility="invisible" />

    <ListView
        android:id="@+id/list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></ListView>
</RelativeLayout>